arkts_static_test/14_Ambient_Declarations/ets_cases/14.3_Ambient_Overload_Function_Declarations/compile-fail/AMB_14_03_008_FAIL_OVERLOAD_DUPLICATE_SIG.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id AMB_14_03_008_FAIL_OVERLOAD_DUPLICATE_SIG
 * @expect compile-fail
 * @section 14.3
 * @design declare overload 两个函数参数类型完全相同（重载等价签名），违反 spec
 * @note 反向用例：重载等价签名应产生编译时错误
 *       ⚠️ SPEC 不一致：spec 要求报错，但 ArkTS 实际编译通过
 *       分类：D 类（Spec 与实现不一致）
 */
declare function fa(x: int): void
declare function fb(x: int): void
declare overload f {fa, fb}
